--- a/Project-Chaos/plugin.yml
+++ b/Project-Chaos/plugin.yml
@@ -1,7 +1,7 @@
 name: Project-Chaos
 version: 1.0
 main: com.kiro.projchaos.ProjectChaos
-auhtor: Kiro
+author: Kiro
 description: Welcome To Hell
 
 commands:
